--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.2.6",
     "cra-template": "1.0.3",
     "css-loader": "3.4.2",
+    "date-fns": "^2.16.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.6.0",
@@ -51,6 +52,7 @@
     "react-dev-utils": "^10.2.1",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
+    "reset-css": "^5.0.1",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.2",
     "sass-loader": "8.0.2",
